--- a/gasolinera/manguera.html
+++ b/gasolinera/manguera.html
@@ -11,7 +11,10 @@
     manguera4
 </div>
 <script>
+    atras = "index.html";
+    siguiente = "cantidad.html";
     function ejecutar(){
-        alert("holi");
+//        $("#atras").hide();
+        $("#siguiente").show();
     }
 </script>
