Un poco de organización de codigo y pruebas con objetos de js para pasar datos entre páginas

--- a/gasolinera/manguera.html
+++ b/gasolinera/manguera.html
@@ -13,8 +13,14 @@
 <script>
     atras = "index.html";
     siguiente = "cantidad.html";
+    variables.manguera = 1; 
     function ejecutar(){
-//        $("#atras").hide();
+        $("#atras").hide();
         $("#siguiente").show();
     }
+    $(document).ready(function(){
+        $("#siguiente").click(function(){
+            alert(variables.manguera);
+        });        
+    });
 </script>
