Cambio en index.html de gasolinera

--- a/gasolinera/index.html
+++ b/gasolinera/index.html
@@ -26,7 +26,7 @@ and open the template in the editor.
             var letraEspera = true;
             $(document).ready(function(){
                 var intervalo = setInterval(cambiarLetraEspera, 500);
-                $("#contenido").load("manguera.html", function(){
+                $("#contenido").load("cantidad.html", function(){
                     $(".ajustable").each(function(){
                     ajustar($(this));
                     });
