--- a/gasolinera/manguera.html
+++ b/gasolinera/manguera.html
@@ -1,7 +1,7 @@
 <div class="col-md-offset-2 col-md-2 col-xs-2 col-sm-2 col-sm-offset-2 col-xs-offset-2 ajustAlt ajustMargen" data-altura="80" data-margen="10" style="background-color: red;">
     manguera1
 </div>
-<div class="col-md-2 ajustAlt ajustMargen col-sm-2 col-xs-2" data-altura="80" data-margen="10" style="background-color: green;">
+<div class="col-md-2 ajustAlt ajustMargen col-sm-2 col-xs-2" data-gasolina="gasolina1" data-altura="80" data-margen="10" style="background-color: green;">
     manguera2
 </div>
 <div class="col-md-2 ajustAlt ajustMargen col-sm-2 col-xs-2" data-altura="80" data-margen="10" style="background-color: blue;">
