--- a/gasolinera/index.html
+++ b/gasolinera/index.html
@@ -29,7 +29,7 @@ and open the template in the editor.
             var variables = new Object();
             $(document).ready(function(){
                 var intervalo = setInterval(cambiarLetraEspera, 500);
-                $("#contenido").load("manguera.html", function(){
+                $("#contenido").load("cantidad.html", function(){ // MODIFICACION NO FINAL
                     ajustarTodo();
                     ejecutar();
                 });    
