Cambios en local

--- a/gasolinera/index.html
+++ b/gasolinera/index.html
@@ -108,6 +108,9 @@ and open the template in the editor.
                 ajustarAltura($("#atras"));
                 ajustarAltura($("#siguiente"));
             }
+            function ejecutar(){
+                
+            }
             
         </script>
     </head>
