--- a/gasolinera/confirmacion.html
+++ b/gasolinera/confirmacion.html
@@ -1,9 +1,50 @@
-<div class="col-xs-offset-3 ajustAlt" data-altura="30">
-	<h1 class="ajustTexto" data-altoTexto="20" data-anchoTexto="40" style="border: 1px solid black">HA SELECCIONADO</h1>
-	<div class="col-xs-offset-0 col-xs-9">
-		<h2>Gasolina: <span="gasolina">ERROR</span></h2>
-		<h2>Litros: <span="litros">ERROR</span></h2>
-		<h2>Precio: <span="precio">ERROR</span></h2>
-	</div>                      
+<div class="col-xs-offset-3 col-xs-6 ajustAlt" data-altura="80" style="border: 1px solid pink; line-height: 100%; padding: 0px">
+	<div class="ajustTexto ajustAlt col-xs-12" data-altura="20" data-altoTexto="100" data-anchoTexto="100" style="border: 1px solid black; margin: 0px">HA SELECCIONADO</div><br/>
+	
+	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
+		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			Gasolina:
+		</div >
+		<div id="gasolina" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			ERROR
+		</div>
+	</div><br/>
+	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
+		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			Litros:
+		</div>
+		<div id="litros" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			ERROR
+		</div>
+	</div><br/>
+	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
+		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			Precio:
+		</div>
+		<div id="precio" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+			ERROR
+		</div>
+	</div><br/>
+	<!-- <div class="ajustAlt col-xs-12" data-altura="60" style="border: 1px solid black; padding:0px"> -->
+		<!-- <div class="col-xs-12" style="padding: 0px"> -->
+			<!-- <div class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">Gasolina:</div> -->
+			<!-- <div id ="gasolina" class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">ERROR<br/></div> -->
+		<!-- </div> -->
+		
+		<!-- <div class="col-xs-12" style="padding: 0px"> -->
+			<!-- <div class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">Litros: </div> -->
+			<!-- <div id="litros" class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">ERROR<br/></div> -->
+		<!-- </div> -->
+		
+		<!-- <div class="col-xs-12" style="padding: 0px"> -->
+			<!-- <div class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">Precio:</div> -->
+			<!-- <div id="precio" class="ajustTexto" data-altoTexto="20" data-anchoTexto="50">ERROR €<br/></div> -->
+		<!-- </div> -->
+	<!-- </div>                       -->
 </div>
+<script>
+ejecutar = function(){
+	ajustarTodo();
+};
+</script>
 
