--- a/gasolinera/confirmacion.html
+++ b/gasolinera/confirmacion.html
@@ -2,26 +2,26 @@
 	<div class="ajustTexto ajustAlt col-xs-12" data-altura="20" data-altoTexto="100" data-anchoTexto="100" style="border: 1px solid black; margin: 0px">HA SELECCIONADO</div><br/>
 	
 	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
-		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div class="col-xs-6 ajustTexto ajustAlt" id="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			Gasolina:
 		</div >
-		<div id="gasolina" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div id="gasolina" class="col-xs-6 seguirTexto ajustAlt" data-modelo="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			ERROR
 		</div>
 	</div><br/>
 	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
-		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div class="col-xs-6 seguirTexto ajustAlt" data-modelo="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			Litros:
 		</div>
-		<div id="litros" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div id="litros" class="col-xs-6 seguirTexto ajustAlt" data-modelo="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			ERROR
 		</div>
 	</div><br/>
 	<div class="col-xs-12 ajustAlt" data-altura="20" style="border: 0px solid black; margin: 0px; padding: 0px">
-		<div class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div class="col-xs-6 seguirTexto ajustAlt" data-modelo="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			Precio:
 		</div>
-		<div id="precio" class="col-xs-6 ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
+		<div id="precio" class="col-xs-6 seguirTexto ajustAlt" data-modelo="principal" data-altura="100" data-altoTexto="100" data-anchoTexto="100">
 			ERROR
 		</div>
 	</div><br/>
