popUps chulos terminados

--- a/gasolinera/manguera.html
+++ b/gasolinera/manguera.html
@@ -42,7 +42,7 @@
     atras = "index.html";
     siguiente = "cantidad.html";
     ejecutar = function(){
-        $("#atras").hide();
+//        $("#atras").hide();
        $("#siguiente").show();
        add("<span id='monedas'>"+$("#monedasocultas").html()+"</span>");
        ajustarTodo();
