--- a/gasolinera/index.html
+++ b/gasolinera/index.html
@@ -45,7 +45,8 @@ and open the template in the editor.
             var atras = "index.html";
             var siguiente = "index.html";
             var variables = new Object();
-			var ejecutar = function(){};
+            var ejecutar = function(){};
+            var fPopUp = function(){};
             $(document).ready(function(){
                 var intervalo = setInterval(cambiarLetraEspera, 500);
                 $("#contenido").load("manguera.html", function(){ 
@@ -55,14 +56,14 @@ and open the template in the editor.
                 });
 
                 $("#comenzar").click(function (){
-                    $("#comenzar").fadeOut(1000);
+                    $("#comenzar").fadeOut(10);
                     inicioTimeOut();
 
                 });
                 $("#siguiente").click(function(){
                     $("#contenido").load(siguiente, function(){ 
                         prepararTexto();
-						ajustarTodo();
+			ajustarTodo();
                         ejecutar();
                     });
                 });
@@ -72,7 +73,26 @@ and open the template in the editor.
 						ajustarTodo();
                         ejecutar();
                     });
-                });                
+                });    
+                $("#popUp").click(function(){
+                    var texto = "Lorem ipsum dolor sit amet, consectetur adipiscing elit.";
+                    var t = {
+                        lineas : 5,
+                        texto :[
+                            {contenido: "a"},
+                            {contenido: ""},
+                            {contenido: texto},
+                            {contenido: ""},
+                            {contenido: ""}
+                        ]
+                    }
+                    var b = {
+                        texto: "Aceptar",
+                        redirigir: "cantidad.html",
+                        estilo :{backgroundColor: "blue", color:"white"}
+                    }
+                    popUp(t, {backgroundColor: 'rgba(0,0,0,0.5)'}, {estilo:{color:'red'}}, b);
+                });
             });
             $(window).resize(function(){
                 ajustarTodo();                            
@@ -139,21 +159,21 @@ and open the template in the editor.
                 $(".ajustable").each(function(){
                     ajustar($(this));
                 });
-                $("#contenido").find(".ajustAlt").each(function(){
+                $("body").find(".ajustAlt").each(function(){
                     ajustarAltura($(this));
                 });
-                $("#contenido").find(".ajustMargen").each(function(){
+                $("body").find(".ajustMargen").each(function(){
                     ajustarMargen($(this));
                 });
 
-		$("#contenido").find(".textoPreparado").each(function(){
+		$("body").find(".textoPreparado").each(function(){
                     ajustarTexto($(this));
                 });
-		$("#contenido").find(".seguirModelo").each(function(){
+		$("body").find(".seguirModelo").each(function(){
                     seguirTexto($(this));
                 });                
-                ajustarAltura($("#atras"));
-                ajustarAltura($("#siguiente"));
+//                ajustarAltura($("#atras"));
+//                ajustarAltura($("#siguiente"));
             }
             function add(html){
                 $("body").append(html);
@@ -186,17 +206,132 @@ and open the template in the editor.
             }
             function seguirTexto(elemento){
                 var modelo = elemento.parent().attr("data-modelo");
-                var fSizeModelo = $("#contenido").find("#"+modelo).children().first().css("font-size");
-                console.log(fSizeModelo);
+                var fSizeModelo = $("body").find("#"+modelo).children().first().css("font-size");
                 elemento.css({fontSize : fSizeModelo});
             }
             function prepararTexto(){
-                    $(".ajustTexto").each(function (){
+                    $("body").find(".ajustTexto").each(function (){
                             $(this).html("<span class='textoPreparado'>"+$(this).html()+"</span>");
                     });
-                    $(".seguirTexto").each(function (){
+                    $("body").find(".seguirTexto").each(function (){
                             $(this).html("<span class='seguirModelo textoPreparado'>"+$(this).html()+"</span>");
                     });
+            }
+            function popUp(html, fondo, caja, boton){
+                $("body").append("<div id='fondoPopUp' style='position:fixed; z-index: 3' data-altura='100' class='ajustable col-xs-12'></div>");
+                if(fondo!=null){
+                    $("#fondoPopUp").css(fondo);
+                }else{
+                    $("#fondoPopUp").css({
+                       backgroundColor: 'rgba(0,0,0,0.5)' 
+                    });
+                }
+                if(caja!= null){
+                    if(caja.dataMargen == null){
+                        caja.dataMargen = '25';
+                    }
+                    if(caja.dataAltura == null){
+                        caja.dataAltura = '50';
+                    }
+                    if(caja.estilo == null){
+                        caja.estilo ={
+                                backgroundColor : "white"
+                        };
+                    }else{
+                        if(caja.estilo.backgroundColor == null){
+                           caja.estilo.backgroundColor = "white";
+                        }
+                    }
+                    if(caja.texto == null){
+                        caja.texto = {
+                            alto : '100',
+                            ancho : '100'
+                        }
+                    }else{
+                        if(caja.texto.alto == null){
+                            caja.texto.alto = '100';
+                        }
+                        if(caja.texto.ancho == null){
+                            caja.texto.ancho = '100';
+                        }
+                    }
+                }else{
+                    //caja = new Object();
+                    caja = {
+                        dataMargen : '25',
+                        dataAltura : '50',
+                        estilo : {
+                            backgroundColor : "white"
+                        },
+                        texto : {
+                            alto : '100',
+                            ancho : '100'
+                        }
+                    };
+                }
+                $("#fondoPopUp").append("<div id='cajaPopUp' class='ajustAlt ajustMargen col-xs-offset-3 col-xs-6' data-altura='"+caja.dataAltura+"' data-margen='"+caja.dataMargen+"' ></div>");
+                $("#cajaPopUp").css(caja.estilo);
+                $("#cajaPopUp").css({zIndex : '4', padding : '0px'});
+
+                var lineas = html.lineas;
+                if (lineas == null){
+                    lineas = 1;
+                }
+                var  imax = 0;
+                var  longmax = 0;
+                var i = 0;
+                for(i = 0; i<lineas; i++){
+                    var lactu = html.texto[i].contenido.length;
+                    if(lactu > longmax){
+                        imax = i;
+                        longmax = lactu;
+                    }
+                }
+                for(i = 0; i<lineas; i++){
+                    if(i != imax){
+                        $("#cajaPopUp").append("<div id='cajaPopUpTexto"+i+"' class='ajustAlt seguirTexto col-xs-12' data-modelo='cajaPopUpTexto"+imax+"' data-altoTexto='"+caja.texto.alto+"'  data-anchoTexto= '"+caja.texto.ancho+"' data-altura='"+80/lineas+"'></div>");
+                    }else{
+                        $("#cajaPopUp").append("<div id='cajaPopUpTexto"+i+"' class='ajustAlt ajustTexto col-xs-12'  data-altoTexto='"+caja.texto.alto+"'  data-anchoTexto= '"+caja.texto.ancho+"' data-altura='"+80/lineas+"'></div>");
+                    }
+                    $("#cajaPopUpTexto"+i).html(html.texto[i].contenido);
+                   
+                }
+                if(boton != null){
+                    if(boton.texto == null){
+                        boton.texto = "Aceptar";
+                    }
+                    if(boton.estilo == null){
+                        boton.estilo ={backgroundColor: "blue"};
+                    }
+                }else{
+                   boton = {
+                        texto: "Aceptar",
+                        estilo :{backgroundColor: "blue"}
+                   };
+                }
+                $("#cajaPopUp").append("<div id='cajaPopUpBoton' onclick='fPopUp()' class='ajustAlt ajustTexto col-xs-offset-5 col-xs-2' data-altura='15' data-altoTexto='100' data-anchoTexto='100'></div>");
+                $("#cajaPopUpBoton").html(boton.texto);
+                $("#cajaPopUpBoton").css(boton.estilo);
+                if(boton.redirigir != null){
+                    fPopUp = function(){
+                        $("#fondoPopUp").remove();
+                        $("#contenido").load(boton.redirigir, function(){ 
+                            prepararTexto();
+                            ajustarTodo();
+                            ejecutar();
+                        });
+                    };
+                }else{
+                    fPopUp = function(){
+                        $("#fondoPopUp").remove();
+
+                    };
+                }
+                prepararTexto();
+                ajustarTodo();
+            }
+            function quitarPopUp(){
+                $("#fondoPopUp").remove();
             }
         </script>
     </head>
@@ -215,10 +350,13 @@ and open the template in the editor.
             
         </div>
         <div id="b_inferior" class="ajustable col-md-12 col-sm-12 col-xs-12" data-altura="12.5" style="background-color: chartreuse; padding: 0px">
-            <div id="atras" class="col-md-1 col-sm-1 col-xs-1" data-altura="100" style="background-color:red">
+            <div id="atras" class="ajustAlt col-xs-1" data-altura="100" style="background-color:red">
                 atras
             </div>
-            <div id="siguiente" class="col-md-1 col-sm-1 col-xs-1 col-md-offset-11 col-sm-offset-11 col-xs-offset-11" data-altura="100" style="background-color:blue; position:absolute; z-index: 2">
+            <div id="popUp" class="ajustAlt col-xs-1 col-xs-offset-5" data-altura="100" style="background-color:yellow; position:absolute; z-index: 2">
+                popUp
+            </div>
+            <div id="siguiente" class="ajustAlt col-xs-1 col-xs-offset-11" data-altura="100" style="background-color:blue; position:absolute; z-index: 2">
                 siguiente
             </div>
         </div>
