--- a/gasolinera/cantidad.html
+++ b/gasolinera/cantidad.html
@@ -1,85 +1,159 @@
-<div class="div1 col-xs-offset-1 col-xs-10 ajustAlt ajustMargen" data-altura="15" data-margen="5" style="border: 1px solid red">
-	<p class="parraf1">
-		<span id="texto1" style="display: inline-block; border: 1px solid red">HA SELECCIONADO GASOLINA <span id="gasolina">ERROR</span></span>
-		<br/>SELECCIONE CANTIDAD:
-	</p>
+<div class="div1 col-xs-offset-1 col-xs-10 ajustAlt ajustMargen" data-altura="15" data-margen="5" style="border: 0px solid red">
+	<div id="informacionBase" class="ajustAlt ajustTexto" data-altura="50" data-altoTexto="100" data-anchoTexto="100">
+		<span id="texto1" style="border: 0px solid red">HA SELECCIONADO GASOLINA <span id="gasolina">ERROR</span></span>
+	</div>
+	<div class="ajustAltura seguirTexto" data-altura="50" data-modelo="informacionBase">
+		SELECCIONE CANTIDAD:
+	</div>
 </div>
 <!-- Dinero -->
-<div class="div2 col-xs-offset-1 col-xs-10 ajustAlt ajustMargen text-center parraf1" data-altura="30" data-margen="5" style="font-size:20px; border: 1px solid blue">
+<div class="div2 col-xs-offset-1 col-xs-10 ajustAlt ajustMargen text-center parraf1" data-altura="30" data-margen="5" style="border: 1px solid blue">
 	<!-- Centenas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masDineroCentenas" type="button" data-valor="10000" data-unidad="dinero" class="boton btn-block btn-info invisible">+</button>
-		<span id="dineroCentenas" class="casillaNumero">0</span>
-		<button id="menosDineroCentenas" type="button" data-valor="-10000" data-unidad="dinero" class="boton btn-block btn-info invisible">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton invisible" data-valor="10000" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
+			<span id="dineroCentenas" class="casillaNumero">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton invisible" data-valor="-10000" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+		</div>	
 	</div>
 	<!-- Decenas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masDineroDecenas" type="button" data-valor="1000" data-unidad="dinero" class="boton btn-block btn-info">+</button>
-		<span id="dineroDecenas" class="casillaNumero">0</span>
-		<button id="menosDineroDecenas" type="button" data-valor="-1000" data-unidad="dinero" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="1000" data-unidad="dinero" src="imagenes/botonSumar.png"></img>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
+			<span id="dineroDecenas" class="casillaNumero" style="border: 0px solid red">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="-1000" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+		</div>		
 	</div>
 	<!-- Unidades -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masDineroUnidades" type="button" data-valor="100" data-unidad="dinero" class="boton btn-block btn-info">+</button>
-		<span id="dineroUnidades" class="casillaNumero">0</span><span style="float:right">.</span>
-		<button id="menosDineroUnidades" type="button" data-valor="-100" data-unidad="dinero" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="100" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
+			<span id="dineroUnidades" class="casillaNumero">0 .</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="-100" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
 	<!-- Decimas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masDineroDecimas" type="button" data-valor="10" data-unidad="dinero" class="boton btn-block btn-info">+</button>
-		<span id="dineroDecimas" class="casillaNumero">0</span>
-		<button id="menosDineroDecimas" type="button" data-valor="-10" data-unidad="dinero" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="10" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green">
+			<span id="dineroDecimas" class="casillaNumero">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="-10" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+		</div>		
 	</div>
 	<!-- Centesimas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masDineroCentesimas" type="button" data-valor="1" data-unidad="dinero" class="boton btn-block btn-info">+</button>
-		<span id="dineroCentesimas" class="casillaNumero">0</span>
-		<button id="menosDineroCentesimas" type="button" data-valor="-1" data-unidad="dinero" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">
+			<img class="boton" data-valor="1" data-unidad="dinero" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
+			<span id="dineroCentesimas" class="casillaNumero">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="-1" data-unidad="dinero" src="imagenes/botonRestar.png"></button>
+		</div>	
 	</div>
-        <div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px; height: 100%">
-		<button  type="button" data-valor="1" data-unidad="litros" class="boton btn-block btn-info invisible">+</button>
-		<span  class="casillaNumero">€</span>
-		<button  type="button" data-valor="-1" data-unidad="litros" class="boton btn-block btn-info invisible">-</button>
+	<!-- Simbolo de € -->
+    <div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="1" data-unidad="litros" class="boton btn-block btn-info invisible"></button>
+		</div>	
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
+			<span class="casillaNumero">€</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="-1" data-unidad="litros" class="boton btn-block btn-info invisible"></button>
+		</div>
 	</div>
 </div>
 <!-- Litros -->
 <div class="div2 col-xs-offset-1 col-xs-10 ajustAlt ajustMargen text-center parraf1" data-altura="30" data-margen="5" style="font-size:20px; border: 1px solid blue">
 	<!-- Centenas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masLitrosCentenas" type="button" data-valor="10000" data-unidad="litros" class="boton btn-block btn-info invisible">+</button>
-		<span id="litrosCentenas" class="casillaNumero">0</span> 
-		<button id="menoslitrosCentenas" type="button" data-valor="-10000" data-unidad="litros" class="boton btn-block btn-info invisible">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton invisible" data-valor="10000" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">
+			<span id="litrosCentenas" class="casillaNumero">0</span> 
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton invisible" data-valor="-10000" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
 	<!-- Decenas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masLitrosDecenas" type="button" data-valor="1000" data-unidad="litros" class="boton btn-block btn-info">+</button>
-		<span id="litrosDecenas" class="casillaNumero">0</span>
-		<button id="menosLitrosDecenas" type="button" data-valor="-1000" data-unidad="litros" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="1000" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>	
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
+			<span id="litrosDecenas" class="casillaNumero">0</span>
+		</div>	
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">		
+			<img class="boton" data-valor="-1000" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
 	<!-- Unidades -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masLitrosUnidades" type="button" data-valor="100" data-unidad="litros" class="boton btn-block btn-info">+</button>
-		<span id="litrosUnidades" class="casillaNumero">0</span><span style="float:right">.</span>
-		<button id="menosLitrosUnidades" type="button" data-valor="-100" data-unidad="litros" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="100" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
+			<span id="litrosUnidades" class="casillaNumero">0 .</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="-100" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
 	<!-- Decimas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px">
-		<button id="masLitrosDecimas" type="button" data-valor="10" data-unidad="litros" class="boton btn-block btn-info">+</button>
-		<span id="litrosDecimas" class="casillaNumero">0</span>
-		<button id="menosLitrosDecimas" type="button" data-valor="-10" data-unidad="litros" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="10" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
+			<span id="litrosDecimas" class="casillaNumero">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="-10" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
 	<!-- Centesimas -->
-	<div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px; height: 100%">
-		<button id="masLitrosCentesimas" type="button" data-valor="1" data-unidad="litros" class="boton btn-block btn-info">+</button>
-		<span id="litrosCentesimas" class="casillaNumero">0</span>
-		<button id="menosLitrosCentesimas" type="button" data-valor="-1" data-unidad="litros" class="boton btn-block btn-info">-</button>
+	<div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap;">	
+			<span id="litrosCentesimas" class="casillaNumero">0</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton" data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
-        <div class="casilla col-xs-2 ajustAlt" data-altura="40" style="border: 0px solid black; margin: 0px; height: 100%">
-		<button  type="button" data-valor="1" data-unidad="litros" class="boton btn-block btn-info invisible">+</button>
-		<span  class="casillaNumero">litros</span>
-		<button  type="button" data-valor="-1" data-unidad="litros" class="boton btn-block btn-info invisible">-</button>
+    <div class="casilla col-xs-2 ajustAlt" data-altura="100" style="border: 0px solid black; margin: 0px; height: 100%">
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton invisible" data-valor="1" data-unidad="litros" src="imagenes/botonSumar.png"></button>
+		</div>
+		<div class="ajustAlt ajustTexto" data-altoTexto="100" data-anchoTexto="100" data-altura="50" style="border: 0px solid green; white-space: nowrap">	
+			<span class="casillaNumero">litros</span>
+		</div>
+		<div class="ajustAlt" data-altura="25" style="border: 0px solid green">	
+			<img class="boton invisible" data-valor="-1" data-unidad="litros" src="imagenes/botonRestar.png"></button>
+		</div>
 	</div>
-	<!--<div class="finCasilla col-xs-2" style="border: 1px solid black; height: 100%">litros</div>-->
 </div>
 <script>
 var conversion;
@@ -89,6 +163,8 @@ var litros = 0;
 siguiente="confirmacion.html";
 atras = "manguera.html";
 ejecutar = function(){
+		$("#atras").show();
+        $("#siguiente").hide();
 		// euros por litro
 		conversion = 1.05;
 		$("#gasolina").html(variables.gasolina);
@@ -118,8 +194,14 @@ $(document).ready(function(){
                     }		
                     actualizarValores();
             }
-            variables.dinero=dinero;
-            variables.litros=litros;
+            variables.dinero = dinero;
+            variables.litros = litros;
+			
+			if(dinero != 0 && litros != 0){
+				$("#siguiente").show();
+			}else{
+				$("#siguiente").hide();
+			}
     });
     // redimension
     
@@ -128,25 +210,32 @@ $(document).ready(function(){
 
 function conversionDineroLitros(){
 	litros = dinero*1.0 / conversion;
+	console.log(dinero+" - "+litros);
 	litros = parseInt(litros);
+	console.log("-> "+dinero+" - "+litros);
 }
 
 function conversionLitrosDinero(){
-	dinero = litros*1.0 * conversion;
-	dinero = parseInt(dinero);
+	var dineroAux = litros*1.0 * conversion;
+	console.log(dinero+" - "+litros);
+	dinero = parseInt(dineroAux);
+	if(dineroAux > dinero){
+		dinero++;
+	}
+	console.log("-> "+dinero+" - "+litros);
 }
 
 function actualizarValores(){
 	$("#dineroCentenas").text    ( parseInt (  dinero / 10000      ));
 	$("#dineroDecenas").text     ( parseInt ( (dinero / 1000) % 10 ));
-	$("#dineroUnidades").text    ( parseInt ( (dinero / 100) % 10  ));
+	$("#dineroUnidades").text    ( parseInt ( (dinero / 100) % 10  )+" .");
 	$("#dineroDecimas").text     ( parseInt ( (dinero / 10) % 10   ));
 	$("#dineroCentesimas").text  ( parseInt ( (dinero / 1) % 10    ));
 	
 	
 	$("#litrosCentenas").text    ( parseInt (  litros / 10000      ));
 	$("#litrosDecenas").text     ( parseInt ( (litros / 1000) % 10 ));
-	$("#litrosUnidades").text    ( parseInt ( (litros / 100) %10   ));
+	$("#litrosUnidades").text    ( parseInt ( (litros / 100) %10   )+" .");
 	$("#litrosDecimas").text     ( parseInt ( (litros / 10) % 10   ));
 	$("#litrosCentesimas").text  ( parseInt ( (litros / 1) % 10    )); 
 }
