--- a/gasolinera/pagoEfectivo.html
+++ b/gasolinera/pagoEfectivo.html
@@ -1,5 +1,10 @@
 <script>
+	atras = "tipoPago.html";
+	
 	ejecutar = function(){
+		$("#atras").show();
+		$("#siguiente").hide();
+		
 		add("<span id='monedas'>"+$("#monedasocultas").html()+"</span>");
-	}
+	};
 </script>
