--- a/gasolinera/pagoTarjeta.html
+++ b/gasolinera/pagoTarjeta.html
@@ -4,10 +4,15 @@
 	<button onClick="insertarTarjeta()">Inserto mi tarjeta</button>
 </div>
 <script>
-	function ejecutar(){}
+	atras = "tipoPago.html";
+	
+	ejecutar = function(){
+		$("#atras").show();
+		$("#siguiente").hide();
+	};
 	
 	function insertarTarjeta(){
 		alert("hola");
-		$("#sustituir").html = "hehe";
+		//$("#sustituir").html = "hehe";
 	}
 </script>
