--- a/gasolinera/tipoPago.html
+++ b/gasolinera/tipoPago.html
@@ -1,21 +1,63 @@
-<div class="col-xs-4 col-xs-offset-0 ajustAlt ajustMargen" data-altura="5" data-margen="2" style="width: 100%; margin-left: 5%">
-	<h1>SELECCIONE EL METODO DE PAGO:</h1>
+<div class="col-xs-10 col-xs-offset-0 ajustAlt ajustMargen" data-altura="10" data-margen="2" style="border: 0px solid red">
+	<div class="ajustTexto ajustAlt" data-altura="100" data-altoTexto="100" data-anchoTexto="100" style="border: 0px solid blue">SELECCIONE EL METODO DE PAGO:</div>
 </div>
-<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="10" style="padding-left: 2%; padding-right: 1%">
-	<button class="btn-block" style="height: 100%">
-		PAGO EN EFECTIVO<br/><br/>
-		<img src="imagenes/pagoEnEfectivo.png" style="max-width: 100%"></img>
-	</button>
+<div class="col-xs-12 ajustAlt" data-altura="100">
+	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
+		<button button id="pagoEfectivo" class="btn-block" style="height: 100%">
+			PAGO EN EFECTIVO<br/><br/>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
+				<img src="imagenes/pagoEnEfectivo.png"></img>
+			</div>
+		</button>
+	</div>
+	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
+		<button button id="pagoTarjeta" class="btn-block" style="height: 100%">
+			PAGO CON TARJETA<br/><br/>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
+				<img src="imagenes/pagoConTarjeta.png" style="max-width: 100%"></img>
+			<div>
+		</button>
+	</div>
+	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
+		<button id="pagoNFC" class="btn-block" style="height: 100%">
+			PAGO VIA NFC<br/><br/>
+			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
+				<img src="imagenes/pagoViaNFC.png" style="max-width: 100%"></img>
+			</div>
+		</button>
+	</div>
 </div>
-<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="10" style="padding-left: 1%; padding-right: 1%">
-	<button class="btn-block" style="height: 100%">
-		PAGO CON TARJETA<br/><br/>
-		<img src="imagenes/pagoConTarjeta.png" style="max-width: 100%"></img>
-	</button>
-</div>
-<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="10" style="padding-left: 1%; padding-right: 2%">
-	<button class="btn-block" style="height: 100%">
-		PAGO VIA NFC<br/><br/>
-		<img src="imagenes/pagoViaNFC.png" style="max-width: 100%"></img>
-	</button>
-</div>
+<script>
+	atras = "manguera.html";
+
+	ejecutar = function(){
+		$("#atras").show();
+		$("#siguiente").hide();
+	};
+
+	$(document).ready(function(){
+		$("#contenido").find("#pagoEfectivo").click(function(){
+			$("#contenido").load("pagoEfectivo.html", function(){ 
+				prepararTexto();
+				ajustarTodo();
+				ejecutar();
+			});
+		});
+		
+		$("#contenido").find("#pagoTarjeta").click(function(){
+			$("#contenido").load("pagoTarjeta.html", function(){ 
+				prepararTexto();
+				ajustarTodo();
+				ejecutar();
+			});
+		});
+		
+		$("#contenido").find("#pagoNFC").click(function(){
+			$("#contenido").load("pagoNfc.html", function(){ 
+				prepararTexto();
+				ajustarTodo();
+				ejecutar();
+			});
+		});
+	});
+</script>
