--- a/gasolinera/pagoEfectivo.html
+++ b/gasolinera/pagoEfectivo.html
@@ -1,10 +1,139 @@
+<div id="monedasocultas" style="display: none">
+    <div class="col-xs-12 ajustable" data-altura="10" style="z-index:2;position:fixed; padding: 0px">
+        <div class="botonesMonedas ajustAlt col-xs-11 invisible" data-altura="100" style=" padding: 0px" >
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">
+				<img id="1cent" class="col-xs-1 ajustAlt" style="background-color: white" data-altura="100" data-valor="1" alt="moneda de 1 centimo" src="imagenes/metalico/1centimo.png"/>
+			</div>
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">
+				<img id="2cent" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="2" alt="moneda de 2 centimos" src="imagenes/metalico/2centimos.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="5cent" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="5" alt="moneda de 5 centimos" src="imagenes/metalico/5centimos.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="10cent" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="10" alt="moneda de 10 centimos" src="imagenes/metalico/10centimos.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="20cent" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="20" alt="moneda de 20 centimos" src="imagenes/metalico/20centimos.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="50cent" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="50" alt="moneda de 50 centimos" src="imagenes/metalico/50centimos.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="1euro" class=" col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="100" alt="moneda de 1 euro" src="imagenes/metalico/1euro.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="2euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="200" alt="moneda de 2 euros" src="imagenes/metalico/2euros.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">
+				<img id="5euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="500" alt="billete de 5 euros" src="imagenes/metalico/5euros.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="10euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="1000" alt="billete de 10 euros" src="imagenes/metalico/10euros.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="20euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="2000" alt="billete de 20 euros" src="imagenes/metalico/20euros.png"/>
+			</div>	
+			<div class="efectivo col-xs-1 ajustAlt" data-altura="100">	
+				<img id="50euros" class="col-xs-1  ajustAlt" style="background-color: white" data-altura="100" data-valor="5000" alt="billete de 50 euros" src="imagenes/metalico/50euros.png"/>
+			</div>	
+        </div>
+        <div class="desplegable col-xs-1 ajustAlt" data-altura="100">
+            <img class="botonDesplegable col-xs-1  ajustAlt" data-altura="100" src="imagenes/menuAbrir.png"/>
+        </div>
+    </div>
+    <div class="litrosEnDeposito col-xs-12 ajustable invisible" data-margen="87.5" data-altura="12.5" style="z-index:2;position:fixed; padding: 0px; background-color: rgba(135,148,169,1)">
+        <div class="col-xs-12 ajustMargen" data-margen="30">
+            <label class="col-xs-offset-3 col-xs-2" style="height: 30%; text-align: right"  for="deposito">Espacio libre en el deposito: </label>
+            <input id="cantidadDeposito" class="col-xs-1" style="height: 30%" name="deposito" min="0" type="number" /><label data-altura="30">&nbsp;litros</label>
+        </div>
+    </div>
+</div>
+<!-- Aqui comienza el "body" -->
+<div id="textoModelo" class="col-xs-offset-1 col-xs-10 ajustAlt ajustTexto ajustMargen" data-margen="10" data-altura="20" data-altoTexto="100" data-anchoTexto="100" style="text-align: center">Cantidad a pagar: <span id="precio">ERROR<span></div>
+<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto ajustMargen" data-margen="10" data-altura="20" data-modelo="textoModelo" style="text-align: center">Insertado: <span id="insertado">ERROR<span></div>
+<div class="col-xs-offset-1 col-xs-10 ajustAlt seguirTexto ajustMargen" data-margen="10" data-altura="20" data-modelo="textoModelo" style="text-align: center">Restante: <span id="restante">ERROR<span></div>
 <script>
 	atras = "tipoPago.html";
+	var menuAbierto = false;
+	
+	var insertado = 0;
+	var restante = 0;	
 	
 	ejecutar = function(){
 		$("#atras").show();
 		$("#siguiente").hide();
 		
+		variables.recogerCambio = false;
+		
 		add("<span id='monedas'>"+$("#monedasocultas").html()+"</span>");
+		
+		restante = variables.dinero;
+		$("#precio").html(((variables.dinero*1.0)/100).toFixed(2)+" €");
+		actualizarValores();
 	};
+	
+	$(document).ready(function(){
+		$(".desplegable").mouseup(function(){
+			if(menuAbierto){
+				$(".botonesMonedas").addClass("invisible");
+				$(".litrosEnDeposito").addClass("invisible");
+				$(".botonDesplegable").attr("src","imagenes/menuAbrir.png");
+				menuAbierto = false;
+			}else{
+				$(".botonesMonedas").removeClass("invisible");
+				$(".litrosEnDeposito").removeClass("invisible");
+				$(".botonDesplegable").attr("src","imagenes/menuCerrar.png");
+				menuAbierto = true;
+			}
+        });
+		
+		$(".efectivo").mouseup(function(){
+		
+			var valor = $(this).children().attr("data-valor");
+			
+			insertado = parseInt(insertado) + parseInt(valor);
+			restante = parseInt(restante) - parseInt(valor);
+			
+			actualizarValores();		
+			
+			// Atras
+			variables.recogerCambio = true;
+			
+			// Salida
+			if(restante < 0){
+				$("#contenido").load("animacionGasolina.html", function(){
+					if($("#espacioDeposito").val() <= 0 || $("#espacioDeposito").val() == undefined){
+						variables.espacioDeposito = 200;
+					}else{
+						variables.espacioDeposito = $("#espacioDeposito").val();
+					}
+					
+					variables.recogerCambio = true;
+					remove("monedas");
+					prepararTexto();
+					ajustarTodo();
+					ejecutar();
+				});
+			}else if(restante == 0){
+				$("#contenido").load("animacionGasolina.html", function(){ 
+					if($("#espacioDeposito").val() <= 0 || $("#espacioDeposito").val() == undefined){
+						variables.espacioDeposito = 200;
+					}else{
+						variables.espacioDeposito = $("#espacioDeposito").val();
+					}
+					variables.recogerCambio = false;
+					remove("monedas");
+					prepararTexto();
+					ajustarTodo();
+					ejecutar();
+				});
+			}
+		});
+	});
+	
+	function actualizarValores(){
+		$("#insertado").html(((insertado*1.0)/100).toFixed(2)+" €");
+		$("#restante").html(((restante*1.0)/100).toFixed(2)+" €");
+	}
 </script>
