--- a/gasolinera/tipoPago.html
+++ b/gasolinera/tipoPago.html
@@ -15,7 +15,7 @@
 			PAGO CON TARJETA<br/><br/>
 			<div class="col-xs-12 ajustAlt ajustMargen" data-altura="70" data-margen="10">
 				<img src="imagenes/pagoConTarjeta.png" style="max-width: 100%"></img>
-			<div>
+			</div>
 		</button>
 	</div>
 	<div class="col-xs-4 ajustAlt ajustMargen" data-altura="75" data-margen="5">
