Funcionalidad casi completa (falta la espera corta en la ultima interfaz finOperacion.html)

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@ and open the template in the editor.
     </head>
     <body>
         <div><a href="gasolinera/index.html">Ir a echar gasolina</a></div>
+		<div><a href="aceiteYNeumaticos/index.html">Ir a comprobar aceite y neumaticos</a></div>
     </body>
 </html>
